--- a/GestionActividades/templates/GestionActividades/AprobacionActividades/index.html
+++ b/GestionActividades/templates/GestionActividades/AprobacionActividades/index.html
@@ -1,6 +1,7 @@
 {% extends 'GestionActividades/_common/base_gestion_actividades.html' %}
 {% load static %}
 {% load eva_tags %}
+<title>{% block titulo %}Aprobación Actividades{% endblock %}</title>
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-solid.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/skins/skin-master.css' %}">
@@ -68,14 +69,14 @@
                                                         {% endif %}
                                                         </td>
                                                         <td>
+                                                        {% if perms.GestionActividades.view_modificacionactividad %}
+                                                            {% if actividad.estado != EstadosActividades.CERRADA %}
+                                                                <a class="fad fa-2x fa-eye" id="editar_{{ actividad.id }}" href="javascript:abrirModalCrearActividad('{% url 'GestionActividades:ver-modificaciones-actividad' actividad.actividad_id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Modificaciones"></a>
+                                                            {% endif %}
+                                                        {% endif %}
                                                         {% if actividad.estado == EstadosModificacionActividad.PENDIENTE %}
                                                             {% for responsable in responsables %}
                                                                 {% if responsable.id == actividad.supervisor_id and responsable.username == usuario %}
-                                                                    {% if perms.GestionActividades.view_modificacionactividad %}
-                                                                        {% if actividad.estado != EstadosActividades.CERRADA %}
-                                                                            <a class="fad fa-2x fa-eye" id="editar_{{ actividad.id }}" href="javascript:abrirModalCrearActividad('{% url 'GestionActividades:ver-modificaciones-actividad' actividad.actividad_id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Modificaciones"></a>
-                                                                        {% endif %}
-                                                                    {% endif %}
                                                                     {% if perms.GestionActividades.change_modificacionactividad %}
                                                                         &nbsp;&nbsp;<a class="far fa-2x fa-check-square" id="accion_modificaciones_actividad_{{ actividad.id }}"  href="javascript:abrirModalAccionActividad('{% url 'GestionActividades:accion-modificaciones-actividad' actividad.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Aprobar/Rechazar"></a>
                                                                     {% endif %}
