EVA-243 refactor: Se eliminan los campos fecha_inicio y fecha_final del formulario de editar actividad, se modifica la presentación de los campos editados por un responsable al supervisor, se pasan al Js de actividades los campos fecha_inicio y fecha_fin de la actividad cuando se abre el modal para editarla.

--- a/GestionActividades/templates/GestionActividades/Actividades/Index.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/Index.html
@@ -197,7 +197,7 @@
                                                                                         {% if actividad.estado != EstadosActividades.CERRADA %}
                                                                                             <div class="col-md-2">
                                                                                                 <small>
-                                                                                                    <a class="fad fa-3x fa-file-edit" id="editar_{{ actividad.id }}" href="javascript:abrirModalCrearActividad('{% url 'GestionActividades:actividades-editar' actividad.id %}', '{{ grupo.id }}', {{ usuario_id }})" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar Actividad"></a>
+                                                                                                    <a class="fad fa-3x fa-file-edit" id="editar_{{ actividad.id }}" href="javascript:abrirModalCrearActividad('{% url 'GestionActividades:actividades-editar' actividad.id %}', '{{ grupo.id }}', {{ usuario_id }}, '{{ actividad.fecha_inicio|date:'Y/m/d' }}', '{{ actividad.fecha_fin|date:'Y/m/d' }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar Actividad"></a>
                                                                                                 </small>
                                                                                             </div>
                                                                                         {% endif %}
