--- a/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
@@ -14,9 +14,9 @@
     </a>
 </li>
 {% endif %}
-{% if perms.Administracion.view_reservasalajuntas %}
+{% if perms.TalentoHumano.view_permisolaboral %}
 <li {% if menu_actual == 'permisos-laborales' %} class="active" {% endif %}>
-    <a href="{% url 'TalentoHumano:permisos-laborales-index' %}" title="Permisos Laborales" data-filter-tags="permisos laborales">
+    <a href="{% url 'TalentoHumano:permisos-laborales-index' 0 %}" title="Permisos Laborales" data-filter-tags="permisos laborales">
         <i class="far fa-id-card-alt"></i>
         <span class="nav-link-text" data-i18n="nav.talentohumano_permisos_laborales">Permisos Laborales</span>
     </a>
